# mathSlib

./: .gitignore  CMakeLists.txt  README.md  mathS.sln
doc/: dev-log-wrc.md  dev-log-zyh.md
mathS/: mathS.vcxproj  mathS.vcxproj.filters
mathS/include/: Compute.h  ConstantEvaluate.h  ExtendedCMath.h  LBAssembler.h  MathFunction.h  MathObject.h  MathParser.h  NAlgorithm.h  NFunction.h  NFunctionalOperator.h  NMathObject.h  Ptr.h  Rule.cpp  Rule.h  RuleLib.h  lexer.h  string-switch.h
mathS/src/: Compute.cpp  Evaluate.cpp  ExtendedCMath.cpp  LBAssembler.cpp  MathObject.cpp  MathParser.cpp  NFunction.cpp  NFunctionalOperator.cpp  NMathObject.cpp  Rule.cpp  RuleLib.cpp  lexer.cpp  main.cpp  string-switch.cpp
